# gaul

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  README.md  README.rst  Untitled.ipynb  codecov.yml  hlinreg.ipynb  linreg.ipynb  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
docs/source/: conf.py  index.rst  requirements.txt
docs/source/examples/: 8schools-Copy1.ipynb  8schools.ipynb  autoregressive.ipynb  gp.ipynb  linreg.ipynb
docs/source/user/: gaul.modelling.rst  gaul.nn.rst  gaul.optim.rst  gaul.rst  gaul.utils.rst  install.rst  modules.rst
examples/: 8schools.ipynb  Untitled.ipynb  hlinreg.ipynb  linreg.ipynb
gaul/: advi.py  hmc.py  quap.py  transforms.py  types.py
gaul/modelling/: hmc.py
gaul/optim/: optimizers.py
gaul/utils/: tree_utils.py
jacket/: tree_utils.py  utils.py
jacket/modelling/: hmc.py
jacket/nn/: attention.py  transformer.py  utils.py
jacket/optim/: optimizers.py
jx/: hmc.py
jx/nn/: attention.py  transformer.py  utils.py
testing/: advi-quap.ipynb
tests/: test_advi.py  test_hmc.py  test_optim.py  test_quap.py  test_transformer.py
