[tool.poetry]
name = "jacket"
version = "0.1.0"
description = ""
authors = ["Jeff Shen <jshen2014@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.3.1"
jaxlib = "^0.3.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
